@@ -2,6 +2,10 @@ update-manager (1:0.87.26) hardy-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeApport.py:
     - fix typo in log dir (LP: #223743)
+  * DistUpgrade/DistUpgradeController.py:
+    - if the "Crux" theme is used on dapper during the upgrade, 
+      switch to "Human" because Crux is known to crash 
+      (LP: #69124)
 
  -- 
 
